=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2012-10-24  14:45:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-421
Add rp and rv options to XML pseudopotential handling

The RPBE and revPBE XC flavors were not correctly handled by
the XML routines.

modified:
  Pseudo/atom/pseudoXML.f
  Util/pseudo-xml/xml2psf_helper.f

-----------------------------------------------------------------------
2012-10-24  13:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-420
Enable MD continuation runs even if the restart file is not available

(Fabiano Corsetti)

If the user has selected MD.UseSaveXV to continue an MD run from a
previously computed set of positions and velocities (in the XV file),
but the appropriate restart file is not found, the positions x(t) and
velocities v(t-dt) are read from the XV file, and the positions are
then backward-propagated by one time step using the Euler method to
start the MD run from time (t-dt) with a consistent set of positions
and velocities.

In previous versions the program complained if the appropriate restart
file was not available. This patch enables cross-restarts (i.e., an
Annealing calculation followed by a Nose simulation) within the simple
"reuse-the-XV-file" framework. The last point computed in the previous
simulation will be basically repeated in the continuation run. For
"seamless" continuations, the flavor-specific restart file is needed.

N.B.: The value of the time step of the previous run (from which the
XV file has been generated) should be equal to that of the current
run. This information is not saved in the XV file, and so it is not
possible for the code to tell whether the two runs are consistent.

N.B. 2: The backward-propagation is only used for runs with more than